Attempt to fix horizontal overflow #2

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ div.about > div.about-card > div.clickable-icons svg {
   }
 
   div.about > div:nth-child(3) {
-    font-size: 4rem;
+    font-size: 3.5rem;
     font-weight: 500;
     max-width: 450px;
     color: white;
